main2014: Alignment issues with h1

--- a/Instanssi/main2014/static/main2014/css/style.css
+++ b/Instanssi/main2014/static/main2014/css/style.css
@@ -42,7 +42,7 @@ sub { font-size: 75%; vertical-align: sub; }
 #page-header a { text-decoration: none; }
 #page-header a:hover { opacity: 0.8; }
 /* 3.4em - 1.43em - 7.2em - 4.25em  || 47px - 20px - 99px - 59px */
-#page-header .header-info h1 { font-size: 47px; color: #fff; font-weight: 800; font-variant: small-caps; padding: 60px 0px 0px 0px; line-height: 20%; }
+#page-header .header-info h1 { font-size: 47px; color: #fff; font-weight: 800; font-variant: small-caps; padding: 80px 0px 0px 0px; line-height: 20%; }
 #page-header .header-info .tagline { font-size: 20px; font-family: 'Exo', sans-serif;  color: #fff; font-weight: 800; font-variant: small-caps; line-height: 80%; margin-bottom: 5px; }
 #page-header .header-info .time { font-size: 30px; font-family: 'Exo', sans-serif; color: #fff; font-weight: 800; font-variant: small-caps; line-height: 80%; }
 
